@@ -3,7 +3,7 @@ package org.springframework.experimental.jdkclient;
 import java.net.URI;
 import java.util.function.Function;
 
-import jdk.incubator.http.HttpClient;
+import java.net.http.HttpClient;
 import reactor.core.publisher.Mono;
 
 import org.springframework.http.HttpMethod;
@@ -12,7 +12,8 @@ import org.springframework.http.client.reactive.ClientHttpRequest;
 import org.springframework.http.client.reactive.ClientHttpResponse;
 
 /**
- * JDK 10 HTTP client implementation of {@link ClientHttpConnector}.
+ * JDK 11 HTTP client implementation of {@link ClientHttpConnector}.
+ *
  * @author Sebastien Deleuze
  */
 public class JdkClientHttpConnector implements ClientHttpConnector {
@@ -21,7 +22,7 @@ public class JdkClientHttpConnector implements ClientHttpConnector {
 
 
 	public JdkClientHttpConnector() {
-		this.httpClient = HttpClient.newHttpClient();
+		this.httpClient = HttpClient.newBuilder().version(HttpClient.Version.HTTP_1_1).build();
 	}
 
 	public JdkClientHttpConnector(HttpClient httpClient) {
